--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -124,6 +124,7 @@ html.dark.lime {
   --font-vazir-medium: "vazir medium", sans-serif;
   --font-vazir: "vazir regular", sans-serif;
   --font-vazir-thin: "vazir thin", sans-serif;
+  --font-roboto: "Roboto Mono", monospace;
 
   --color-theme: var(--default-color);
   --color-hover: var(--hover-color);
@@ -132,4 +133,10 @@ html.dark.lime {
 @utility container {
   margin-left: auto;
   margin-right: auto;
+}
+
+@layer components {
+  .sidebar-nav-item .active {
+    @apply bg-theme/5 text-theme;
+  }
 }
