feat(panle): complete panel header and panel sidebar

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -119,6 +119,8 @@ html.lime {
 @utility container {
   margin-left: auto;
   margin-right: auto;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 @utility sidebar-nav-item {
